2008-02-16 Borut Razem <borut.razem AT siol.net>

	* as/z80/asmain.c, as/z80/asm.h, as/z80/asdata.c,
	  as/link/z80/lkmain.c, as/z80/as_gbz80.dsp, as/z80/as_z80.dsp,
	  as/z80/Makefile.in. as/z80/Makefile.bcc: 
	  applied patch #1893393: patch for as-z80 and link-z80 to generate
	  cdb, thanks to Armin Diehl
	* as/*/asnoice.c, as/hc08/as_hc08.dsp, as/hc08/Makefile.in,
	  as/mcs51/asx8051.dsp, as/mcs51/Makefile.in:
	  asnoice.c moved to as/asxxsrc/asnoice.c
	* src/z80/peeph-gbz80.def: applied patch
	  #1880235: Z80 return peephole, thanks to Philipp Krause

2008-02-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/sdccman.lyx: bumped version to 2.7.5
	* src/SDCCsymt.c (compareType, comparePtrType): fixed bug 1281583

2008-02-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/pic16/stdlib.h,
	* device/lib/pic16/libc/stdlib/ltoa.c,
	* device/lib/pic16/libc/stdio/vfprintf.c: ascii strings are char*

2008-02-13 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, src/SDCCglue.c: fixed --c1mode
	* src/pic16/glue.c, src/SDCCast.c, src/SDCCast.h, src/SDCCBBlock.c,
	  src/SDCCcse.c, src/SDCCglue.c, src/SDCCicode.c, src/SDCCloop.c,
	  src/SDCCopt.c,  src/SDCCval.c:
	  fixed bug #1890273: SDCC Warning 154 shows wrong filename

2008-02-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (compareType): fixed bug 1309013

2008-02-09 Borut Razem <borut.razem AT siol.net>

	* src/SDCCval.c, src/SDCCval.h:
	  code cleaning, added function constChrVal()
	* src/SDCCglue.c, src/pic/glue.c, src/pic16/glue.c, src/SDCCast.c, src/SDCC.y:
	  call constChrVal() instead constVal()

2008-02-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (resolveSymbols): added reentrancy check for parameters
	  of function pointer
	* src/SDCCerr.h,
	* src/SDCCerr.c: changed warning W_NONRENT_ARGS to error E_NONRENT_ARGS
	* support/regression/tests/absolute.c: added TestStruct TestVar (see also
	  bug 1859853)
