@@ -5,15 +5,14 @@ include $(top_builddir)/Makefile.common
 clean:
 	rm -f *core *[%~] *.[oa]
 	rm -f .[a-z]*~
-	rm -f $(top_builddir)/bin/link-z80$(EXEEXT) link-z80$(EXEEXT) \
-	      $(top_builddir)/bin/link-gbz80$(EXEEXT) link-gbz80$(EXEEXT)
-	rm -f *.dep
+	rm -f $(top_builddir)/bin/link-z80$(EXEEXT) link-z80$(EXEEXT)
+	rm -f $(top_builddir)/bin/link-gbz80$(EXEEXT) link-gbz80$(EXEEXT)
 	rm -rf obj
 
 # Deleting all files created by configuring or building the program
 # -----------------------------------------------------------------
 distclean: clean
-	rm -f Makefile
+	rm -f Makefile *.dep
 
 # Like clean but some files may still exist
 # -----------------------------------------
