@@ -6,13 +6,14 @@ PRJDIR          = ../..
 
 CFLAGS          = $(CFLAGS) -DINDEXLIB -DMLH_MAP -DSDK
 
-OBJECTS       = asdata.obj asexpr.obj aslex.obj aslist.obj asmain.obj \
-                asout.obj assubr.obj z80adr.obj z80ext.obj asnoice.obj \
-                z80mch.obj z80pst.obj \
-                ../asxxsrc/strcmpi.obj ../asxxsrc/assym.obj ../asxxsrc/aslex.obj \
-                ../../support/Util/dbuf.obj ../../support/Util/dbuf_string.obj
+OBJECTS         = asdata.obj asexpr.obj aslex.obj aslist.obj asmain.obj \
+                  asout.obj assubr.obj z80adr.obj z80ext.obj \
+                  z80mch.obj z80pst.obj \
+                  ../asxxsrc/strcmpi.obj ../asxxsrc/assym.obj ../asxxsrc/aslex.obj \
+                  ../asxxsrc/asnoice.obj \
+                  ../../support/Util/dbuf.obj ../../support/Util/dbuf_string.obj
 
-TARGET         = $(PRJDIR)/bin/as-z80.exe
+TARGET          = $(PRJDIR)/bin/as-z80.exe
 
 all: $(TARGET)
 
